k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-leave-service
  namespace: employee-leave
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: employee-leave-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
