k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-leave-ingress
  namespace: employee-leave
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: sharan.kubeace.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-leave-service
                port:
                  number: 80
